// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SSelect.vue can be a multiple select 1`] = `
<label class="label" for="select">
  <div>
    Select
    <!---->
  </div>
  <div class="select__container select__container--multiple"><select id="select" name="select" required="required" class="select" multiple="multiple">
      <option value="" disabled="disabled">
        Select an option
      </option>
      <option value="one">
        one
      </option>
      <option value="two">
        two
      </option>
    </select>
    <!---->
    <!---->
  </div>
</label>
`;

exports[`SSelect.vue can be disabled correctly 1`] = `
<label class="label" for="select">
  <div>
    Select
    <!---->
  </div>
  <div class="select__container select__container--disabled"><select id="select" name="select" required="required" class="select" disabled="disabled">
      <option hidden="hidden" value="" disabled="disabled">
        Select an option
      </option>
      <option value="one">
        one
      </option>
      <option value="two">
        two
      </option>
    </select>
    <!---->
    <!---->
  </div>
</label>
`;

exports[`SSelect.vue can be fullwidth 1`] = `
<label class="label label--fullwidth" for="select">
  <div>
    Select
    <!---->
  </div>
  <div class="select__container"><select id="select" name="select" required="required" class="select">
      <option hidden="hidden" value="" disabled="disabled">
        Select an option
      </option>
      <option value="one">
        one
      </option>
      <option value="two">
        two
      </option>
    </select>
    <!---->
    <!---->
  </div>
</label>
`;

exports[`SSelect.vue can be inline 1`] = `
<label class="label label--inline" for="select">
  <div>
    Select
    <!---->
  </div>
  <div class="select__container"><select id="select" name="select" required="required" class="select">
      <option hidden="hidden" value="" disabled="disabled">
        Select an option
      </option>
      <option value="one">
        one
      </option>
      <option value="two">
        two
      </option>
    </select>
    <!---->
    <!---->
  </div>
</label>
`;

exports[`SSelect.vue can be invalid 1`] = `
<label class="label" for="select">
  <div>
    Select
    <!---->
  </div>
  <div class="select__container"><select id="select" name="select" required="required" class="select select--invalid">
      <option hidden="hidden" value="" disabled="disabled">
        Select an option
      </option>
      <option value="one">
        one
      </option>
      <option value="two">
        two
      </option>
    </select>
    <!---->
    <!---->
  </div>
</label>
`;

exports[`SSelect.vue can be required 1`] = `
<label class="label" for="select">
  <div>
    Select
    <!---->
  </div>
  <div class="select__container"><select id="select" name="select" required="required" class="select">
      <option hidden="hidden" value="" disabled="disabled">
        Select an option
      </option>
      <option value="one">
        one
      </option>
      <option value="two">
        two
      </option>
    </select>
    <!---->
    <!---->
  </div>
</label>
`;

exports[`SSelect.vue can have a single placeholder 1`] = `
<label class="label" for="select">
  <div>
    Select
    <!---->
  </div>
  <div class="select__container"><select id="select" name="select" required="required" class="select">
      <option hidden="hidden" value="" disabled="disabled">
        This is a placeholder
      </option>
      <option value="one">
        one
      </option>
      <option value="two">
        two
      </option>
    </select>
    <!---->
    <!---->
  </div>
</label>
`;

exports[`SSelect.vue can have an icon on the left 1`] = `
<label class="label" for="select">
  <div>
    Select
    <!---->
  </div>
  <div class="select__container"><select id="select" name="select" required="required" class="select select--has-icon-left">
      <option hidden="hidden" value="" disabled="disabled">
        Select an option
      </option>
      <option value="one">
        one
      </option>
      <option value="two">
        two
      </option>
    </select> <svg viewBox="0 0 24 24" class="icon select__icon select__icon--left icon--color-green" aria-hidden="true">
      <polyline points="22 12 18 12 15 21 9 3 6 12 2 12"></polyline>
    </svg>
    <!---->
  </div>
</label>
`;

exports[`SSelect.vue can have an icon on the right 1`] = `
<label class="label" for="select">
  <div>
    Select
    <!---->
  </div>
  <div class="select__container"><select id="select" name="select" required="required" class="select select--has-icon-right">
      <option hidden="hidden" value="" disabled="disabled">
        Select an option
      </option>
      <option value="one">
        one
      </option>
      <option value="two">
        two
      </option>
    </select>
    <!----> <svg viewBox="0 0 24 24" class="icon select__icon select__icon--right icon--color-green" aria-hidden="true">
      <polyline points="22 12 18 12 15 21 9 3 6 12 2 12"></polyline>
    </svg></div>
</label>
`;

exports[`SSelect.vue can hide the optional tag 1`] = `
<label class="label" for="select">
  <div>
    Select
    <!---->
  </div>
  <div class="select__container"><select id="select" name="select" class="select">
      <option hidden="hidden" value="" disabled="disabled">
        Select an option
      </option>
      <option value="one">
        one
      </option>
      <option value="two">
        two
      </option>
    </select>
    <!---->
    <!---->
  </div>
</label>
`;

exports[`SSelect.vue can set each icon color 1`] = `
<label class="label" for="select">
  <div>
    Select
    <!---->
  </div>
  <div class="select__container"><select id="select" name="select" required="required" class="select">
      <option hidden="hidden" value="" disabled="disabled">
        Select an option
      </option>
      <option value="one">
        one
      </option>
      <option value="two">
        two
      </option>
    </select>
    <!---->
    <!---->
  </div>
</label>
`;

exports[`SSelect.vue can use an array of objects for \`selectOptions\` 1`] = `
<label class="label" for="select">
  <div>
    Select
    <!---->
  </div>
  <div class="select__container"><select id="select" name="select" required="required" class="select">
      <option hidden="hidden" value="" disabled="disabled">
        Select an option
      </option>
      <option value="1">
        One
      </option>
      <option value="2">
        Two
      </option>
    </select>
    <!---->
    <!---->
  </div>
</label>
`;

exports[`SSelect.vue can use an object of arrays \`selectOptions\` with groups 1`] = `
<label class="label" for="select">
  <div>
    Select
    <!---->
  </div>
  <div class="select__container"><select id="select" name="select" required="required" class="select">
      <option hidden="hidden" value="" disabled="disabled">
        Select an option
      </option>
      <optgroup label="groupOne">
        <option value="1">
          One
        </option>
      </optgroup>
      <optgroup label="groupTwo">
        <option value="2">
          Two
        </option>
      </optgroup>
    </select>
    <!---->
    <!---->
  </div>
</label>
`;

exports[`SSelect.vue can use an object of objects for \`selectOptions\` 1`] = `
<label class="label" for="select">
  <div>
    Select
    <!---->
  </div>
  <div class="select__container"><select id="select" name="select" required="required" class="select">
      <option hidden="hidden" value="" disabled="disabled">
        Select an option
      </option>
      <option value="1">
        One
      </option>
      <option value="2">
        Two
      </option>
    </select>
    <!---->
    <!---->
  </div>
</label>
`;

exports[`SSelect.vue renders correctly 1`] = `
<label class="label" for="select">
  <div>
    Select
    <!---->
  </div>
  <div class="select__container"><select id="select" name="select" required="required" class="select">
      <option hidden="hidden" value="" disabled="disabled">
        Select an option
      </option>
      <option value="one">
        one
      </option>
      <option value="two">
        two
      </option>
    </select>
    <!---->
    <!---->
  </div>
</label>
`;
